--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.27MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.70MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
-  - {name: 🇨🇳 中国-17.96MB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇺🇸 美国-4.75MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.13MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
   - {name: 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇳🇱 荷兰-616.1KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-202.8KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇺🇸 美国-397.8KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇬🇧 英国-835.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-350.7KB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-455.8KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-398.0KB/s(Youtube:不良林), server: aiaph1.www.klrxyru.cn, port: 1641, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇺🇸 美国-2.99MB/s(Youtube:不良林), server: v5.tgfaka.com, port: 48443, type: trojan, password: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, sni: v5.tgfaka.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.85MB/s(Youtube:不良林), server: v5.tgfaka.com, port: 48443, type: trojan, password: 6f48efb9-3817-4652-832f-fd04d93ebbc1, sni: v5.tgfaka.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-616.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-202.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-397.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-835.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-455.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-616.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-202.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-397.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-835.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-455.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-616.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-202.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-397.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-835.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-455.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-616.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-202.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-397.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-835.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-455.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-616.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-202.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-397.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-835.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-455.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-616.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-202.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-397.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-835.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-455.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-616.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-202.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-397.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-835.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-455.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
