--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.98MB/s(Youtube:不良林), server: shkr2.vip.www.klrxyru.cn, port: 1552, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: 8d83584393.wns.windows.com}
+  - {name: 🇨🇳 中国-398.0KB/s(Youtube:不良林), server: aiaph1.www.klrxyru.cn, port: 1641, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇨🇳 中国-4.00MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
   - {name: 🇸🇬 新加坡-3.70MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-656.3KB/s(Youtube:不良林), server: aiaus1.game.www.klrxyru.cn, port: 1420, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇨🇳 中国-2.41MB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇺🇸 美国-2.99MB/s(Youtube:不良林), server: v5.tgfaka.com, port: 48443, type: trojan, password: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, sni: v5.tgfaka.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.85MB/s(Youtube:不良林), server: v5.tgfaka.com, port: 48443, type: trojan, password: 6f48efb9-3817-4652-832f-fd04d93ebbc1, sni: v5.tgfaka.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-528.6KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.93MB/s(Youtube:不良林), server: trus.moonfree.top, port: 443, type: trojan, password: 4863e1b2-ec2f-4c71-b862-ce533028e57e, sni: trus.moonfree.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.41MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-616.1KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.78MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.02MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-5.26MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-534.2KB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-12.12MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-656.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-528.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-616.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.26MB/s(Youtube:不良林)
+      - 🇮🇳 印度-534.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.12MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-656.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-528.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-616.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.26MB/s(Youtube:不良林)
+      - 🇮🇳 印度-534.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.12MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-656.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-528.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-616.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.26MB/s(Youtube:不良林)
+      - 🇮🇳 印度-534.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.12MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-656.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-528.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-616.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.26MB/s(Youtube:不良林)
+      - 🇮🇳 印度-534.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.12MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-656.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-528.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-616.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.26MB/s(Youtube:不良林)
+      - 🇮🇳 印度-534.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.12MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-656.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-528.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-616.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.26MB/s(Youtube:不良林)
+      - 🇮🇳 印度-534.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.12MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-656.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-528.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-616.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.26MB/s(Youtube:不良林)
+      - 🇮🇳 印度-534.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.12MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
