--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.00MB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇰🇷 韩国-3.94MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-350.7KB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.41MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.96MB/s(Youtube:不良林), server: shkr2.vip.www.klrxyru.cn, port: 1552, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: 8d83584393.wns.windows.com}
+  - {name: 🇨🇳 中国-9.79MB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇳🇱 荷兰-1.04MB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.02MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-5.26MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-534.2KB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-12.12MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.01MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.92MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 捷克-1.71MB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇨🇳 台湾-10.77MB/s(Youtube:不良林), server: 61.222.202.140, port: 33792, type: vmess, uuid: e55cd182-01b0-4fb7-a510-363701a491c5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 61.222.202.140}}
+  - {name: 🇻🇳 越南-917.2KB/s(Youtube:不良林), server: 103.90.220.27, port: 80, type: vmess, uuid: d97ee737-7bc0-4dca-acf1-85135ed4d97e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.90.220.27}}
+  - {name: 🇨🇦 加拿大-1.30MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-3.67MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-350.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.79MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.26MB/s(Youtube:不良林)
-      - 🇮🇳 印度-534.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.92MB/s(Youtube:不良林)
+      - 捷克-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-917.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-350.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.79MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.26MB/s(Youtube:不良林)
-      - 🇮🇳 印度-534.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.92MB/s(Youtube:不良林)
+      - 捷克-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-917.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-350.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.79MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.26MB/s(Youtube:不良林)
-      - 🇮🇳 印度-534.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.92MB/s(Youtube:不良林)
+      - 捷克-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-917.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-10.77MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-350.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.79MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.26MB/s(Youtube:不良林)
-      - 🇮🇳 印度-534.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.92MB/s(Youtube:不良林)
+      - 捷克-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-917.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-350.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.79MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.26MB/s(Youtube:不良林)
-      - 🇮🇳 印度-534.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.92MB/s(Youtube:不良林)
+      - 捷克-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-917.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-350.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.79MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.26MB/s(Youtube:不良林)
-      - 🇮🇳 印度-534.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.92MB/s(Youtube:不良林)
+      - 捷克-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-917.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-350.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.79MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.26MB/s(Youtube:不良林)
-      - 🇮🇳 印度-534.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.92MB/s(Youtube:不良林)
+      - 捷克-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-917.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
